--- a/WhipLib/WhipLib.vcxproj
+++ b/WhipLib/WhipLib.vcxproj
@@ -141,7 +141,7 @@
     <ClInclude Include="SignPlans\TreePlans.h" />
     <ClInclude Include="SignType.h" />
     <ClInclude Include="Texture.h" />
-    <ClInclude Include="TrackData.h" />
+    <ClInclude Include="Track.h" />
     <ClInclude Include="Types.h" />
     <ClInclude Include="Unmangler.h" />
     <ClInclude Include="Vertex.h" />
@@ -157,7 +157,7 @@
     <ClCompile Include="Shader.cpp" />
     <ClCompile Include="ShapeData.cpp" />
     <ClCompile Include="Texture.cpp" />
-    <ClCompile Include="TrackData.cpp" />
+    <ClCompile Include="Track.cpp" />
     <ClCompile Include="Unmangler.cpp" />
     <ClCompile Include="VertexArray.cpp" />
     <ClCompile Include="VertexBuffer.cpp" />
