analyzer now analyzes

--- a/TrackAnalyzer/TrackAnalyzer.vcxproj
+++ b/TrackAnalyzer/TrackAnalyzer.vcxproj
@@ -91,6 +91,11 @@
   <ItemGroup>
     <ClCompile Include="Main.cpp" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\WhipLib\WhipLib.vcxproj">
+      <Project>{ffe1e8a8-1052-4271-aa18-253855aba0e6}</Project>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
