Linking FBX SDK and ignoring 4099 missing PDB linker warning since FBX SDK does not include PDBs in their package

--- a/TrackAnalyzer/TrackAnalyzer.vcxproj
+++ b/TrackAnalyzer/TrackAnalyzer.vcxproj
@@ -65,6 +65,7 @@
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <AdditionalLibraryDirectories>..\lib\x64</AdditionalLibraryDirectories>
       <AdditionalDependencies>WhipLib_staticd.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalOptions>/ignore:4099 %(AdditionalOptions)</AdditionalOptions>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
@@ -86,6 +87,7 @@
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <AdditionalLibraryDirectories>..\lib\x64</AdditionalLibraryDirectories>
       <AdditionalDependencies>WhipLib_static.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalOptions>/ignore:4099 %(AdditionalOptions)</AdditionalOptions>
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
