--- a/WhipLib/WhipLib.vcxproj
+++ b/WhipLib/WhipLib.vcxproj
@@ -108,6 +108,7 @@
     <ClInclude Include="Animation.h" />
     <ClInclude Include="Camera.h" />
     <ClInclude Include="CarHelpers.h" />
+    <ClInclude Include="DisasmHelpers.h" />
     <ClInclude Include="FBXExporter.h" />
     <ClInclude Include="Logging.h" />
     <ClInclude Include="ShapeFactory.h" />
@@ -155,6 +156,7 @@
   <ItemGroup>
     <ClCompile Include="Camera.cpp" />
     <ClCompile Include="CarHelpers.cpp" />
+    <ClCompile Include="DisasmHelpers.cpp" />
     <ClCompile Include="FBXExporter.cpp" />
     <ClCompile Include="Logging.cpp" />
     <ClCompile Include="ShapeFactory.cpp" />
