--- a/WhipLib/WhipLib.vcxproj.filters
+++ b/WhipLib/WhipLib.vcxproj.filters
@@ -161,6 +161,9 @@
     <ClInclude Include="DisasmHelpers.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="WhipLib.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Unmangler.cpp">
@@ -206,6 +209,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="DisasmHelpers.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="WhipLib.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
